--- a/.github/workflows/update_used_languages_assets.yml
+++ b/.github/workflows/update_used_languages_assets.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
 
-    - name: Download used_languges.svg
+    - name: Download used_languages.svg
       run: |
         mkdir -p assets
         curl 'https://github-readme-stats-e3aipmg2v-fatihyigit35.vercel.app/api/top-langs?username=FatihYigit35&card_width=450&show_icons=true&locale=en&layout=compact&theme=chartreuse-dark&cache_seconds=86400' -o assets/used_languages.svg
@@ -26,5 +26,5 @@ jobs:
         git config user.name "fatihyigit35"
         git config user.email "fatih.yigit.35@gmail.com"
         git add assets/used_languages.svg
-        git commit -i assets/used_languges.svg -m "Update used languages assets"
+        git commit -i assets/used_languages.svg -m "Update used languages assets"
         git push origin
