--- a/.github/workflows/update_stast_assest.yml
+++ b/.github/workflows/update_stast_assest.yml
@@ -40,7 +40,7 @@ jobs:
           path: assets
       - uses: stefanzweifel/git-auto-commit-action@v4
         env:
-          GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
+          CUSTOM_GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
         with:
           commit_message: "chore(assets): update cached GRS files"
           branch: main
